// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaintenanceTakeover renders the correct message text when only end time is provided 1`] = `
<div
  className="tablet:padding-y-10 text-center"
>
  <Title>
    We’re undergoing maintenance
  </Title>
  <Lead
    className="margin-x-auto measure-2"
  >
    <Trans
      i18nKey="components.maintenanceTakeover.scheduledWithEndAndNoStart"
      values={
        Object {
          "end": "June 17, 2021, 10:00 AM EDT",
          "start": null,
        }
      }
    />
  </Lead>
</div>
`;

exports[`MaintenanceTakeover renders the correct message text when only end time is provided 2`] = `
Array [
  "We're performing some maintenance on our system, so you can't log in or work on any applications right now. The system will be back online and available on ",
  <strong
    key="strong-1"
  >
    June 17, 2021, 10:00 AM EDT
  </strong>,
  ".",
]
`;

exports[`MaintenanceTakeover renders the correct message text when start/end times are both provided 1`] = `
<div
  className="tablet:padding-y-10 text-center"
>
  <Title>
    We’re undergoing maintenance
  </Title>
  <Lead
    className="margin-x-auto measure-2"
  >
    <Trans
      i18nKey="components.maintenanceTakeover.scheduledWithStartAndEnd"
      values={
        Object {
          "end": "June 17, 2021, 10:00 AM EDT",
          "start": "June 15, 2021, 3:00 PM EDT",
        }
      }
    />
  </Lead>
</div>
`;

exports[`MaintenanceTakeover renders the correct message text when start/end times are both provided 2`] = `
Array [
  "We're performing some maintenance on our system, so you can't log in or work on any applications right now. The system will be offline from ",
  <strong
    key="strong-1"
  >
    June 15, 2021, 3:00 PM EDT
  </strong>,
  " to ",
  <strong
    key="strong-3"
  >
    June 17, 2021, 10:00 AM EDT
  </strong>,
  ".",
]
`;

exports[`MaintenanceTakeover renders the correct message text when start/end times are not provided 1`] = `
<div
  className="tablet:padding-y-10 text-center"
>
  <Title>
    We’re undergoing maintenance
  </Title>
  <Lead
    className="margin-x-auto measure-2"
  >
    <Trans
      i18nKey="components.maintenanceTakeover.noSchedule"
      values={
        Object {
          "end": null,
          "start": null,
        }
      }
    />
  </Lead>
</div>
`;

exports[`MaintenanceTakeover renders the correct message text when start/end times are not provided 2`] = `"We’re performing some maintenance on our system. Please check back in a few hours, or call the Contact Center at (833) 344‑7365 between 8 a.m.-5 p.m. ET."`;
